[UPDATE] warehouse config